--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -193,3 +193,34 @@
     display: block;
   }
 }
+
+// HOTEL OVERVIEW
+.overview {
+  display: flex;
+
+  &__heading {
+  }
+
+  &__stars {
+    margin-right: auto;
+  }
+
+  &__icon-star,
+  &__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__location {
+  }
+
+  &__rating {
+  }
+
+  &__rating-average {
+  }
+
+  &__rating-count {
+  }
+}
