--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -51,7 +51,6 @@
 
 .hotel-view {
   background-color: #fff;
-  background-color: orangered;
   height: 80rem;
 
   flex: 1;
